// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-hkWWFD iCIHEQ"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-hkWWFD iCIHEQ"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-hkWWFD iCIHEQ"
>
  <span
    className="sc-ehmXTo jsmZPi"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-hkWWFD iCIHEQ"
>
  <div
    className="sc-hoIcGJ bsLbpK"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-hkWWFD fNeElx"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-hkWWFD dwwahl"
  size="small"
/>
`;
